name:                tempo-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tempo-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library  
  exposed-modules:     Tempo 
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable tempo-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tempo-cli 
                     , wreq
                     , lens
                     , aeson
                     , text
                     , bytestring
                     , time  

test-suite tempo-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tempo-cli
                     , hspec
